fix: add some spacing between quick jump links and quick jump heading.

--- a/styles/main.css
+++ b/styles/main.css
@@ -536,6 +536,7 @@ footer {
 
 #qj-links {
   display: flex;
+  margin-top: 1rem;
 }
 
 .qj-item {
